erDiagram
    ROLES ||--o{ USER_ROLES : ""
    USERS ||--o{ USER_ROLES : ""
    ROLES ||--o{ ROLE_PERMISSIONS : ""
    PERMISSIONS ||--o{ ROLE_PERMISSIONS : ""
    USERS ||--o{ REFRESH_TOKENS : ""

    STUDENTS ||--|| STUDENT_PERSONAL_DATA : "1:1"
    STUDENTS ||--o{ ADDRESSES : "1:N"
    STUDENTS ||--o{ EMERGENCY_CONTACTS : "1:N"
    STUDENTS }o--|| CAREERS : "N:1 (ref)"
    STUDENTS }o--|| ACADEMIC_PERIODS : "N:1 admision (ref)"

    CAREERS ||--o{ CAREER_SUBJECTS : "1:N"
    SUBJECTS ||--o{ CAREER_SUBJECTS : "1:N"
    SUBJECTS ||--o{ SUBJECT_PREREQUISITES : "subject"
    SUBJECTS ||--o{ SUBJECT_PREREQUISITES : "prerequisite"

    STUDENTS ||--o{ ENROLLMENTS : "1:N (ref)"
    ACADEMIC_PERIODS ||--o{ ENROLLMENTS : "1:N"
    ENROLLMENTS ||--o{ ENROLLMENT_SUBJECTS : "1:N"
    SUBJECTS ||--o{ ENROLLMENT_SUBJECTS : "1:N"
    ENROLLMENT_SUBJECTS ||--o{ GRADES : "1:N (parciales)"

    DOCUMENT_TYPES ||--o{ STUDENT_DOCUMENTS : "1:N"
    STUDENTS ||--o{ STUDENT_DOCUMENTS : "1:N (ref)"

    USERS {
        uuid id PK
        varchar username UK
        varchar email UK
        varchar password_hash
        boolean is_active
    }
    ROLES {
        uuid id PK
        varchar name UK
    }
    PERMISSIONS {
        uuid id PK
        varchar name UK
    }
    USER_ROLES {
        uuid user_id FK
        uuid role_id FK
    }
    ROLE_PERMISSIONS {
        uuid role_id FK
        uuid permission_id FK
    }
    REFRESH_TOKENS {
        uuid id PK
        uuid user_id FK
        varchar token_hash UK
        timestamptz expires_at
    }

    STUDENTS {
        uuid id PK
        uuid user_id UK "ref auth.users"
        varchar student_code UK
        uuid career_id "ref academic.careers"
        uuid admission_period_id "ref academic.academic_periods"
        smallint current_semester
        varchar status
    }
    STUDENT_PERSONAL_DATA {
        uuid id PK
        uuid student_id FK_UK
        varchar first_name
        varchar curp UK
    }
    ADDRESSES {
        uuid id PK
        uuid student_id FK
        varchar address_type
    }
    EMERGENCY_CONTACTS {
        uuid id PK
        uuid student_id FK
    }

    CAREERS {
        uuid id PK
        varchar name UK
        varchar code UK
        smallint total_semesters
    }
    ACADEMIC_PERIODS {
        uuid id PK
        varchar name UK
        date start_date
        date end_date
    }
    SUBJECTS {
        uuid id PK
        varchar code UK
        smallint credits
    }
    CAREER_SUBJECTS {
        uuid id PK
        uuid career_id FK
        uuid subject_id FK
        smallint semester
    }
    SUBJECT_PREREQUISITES {
        uuid id PK
        uuid subject_id FK
        uuid prerequisite_subject_id FK
    }
    ENROLLMENTS {
        uuid id PK
        uuid student_id "ref student.students"
        uuid academic_period_id FK
        varchar status
    }
    ENROLLMENT_SUBJECTS {
        uuid id PK
        uuid enrollment_id FK
        uuid subject_id FK
        varchar status
    }
    GRADES {
        uuid id PK
        uuid enrollment_subject_id FK
        smallint partial_number
        numeric grade_value
    }

    DOCUMENT_TYPES {
        uuid id PK
        varchar code UK
    }
    STUDENT_DOCUMENTS {
        uuid id PK
        uuid student_id "ref student.students"
        uuid document_type_id FK
        varchar status
    }
